updated cancer rates

--- a/index.html
+++ b/index.html
@@ -61,6 +61,8 @@
           <h4>US Cities</h4>
           <p>Map showing the largest 1000 US cities that are imported from a JSON file. The cities are evenly divided into "clinics" and "competitors". The map also incorporates a layers control that allows you to change the map type and show/hide clinics and competitors. <a href="us_cities.html" target="_blank">map</a></p>
 
+          <h4>Lake County Illinois Cancer Rates</h4>
+          <p>Map showing the cancer rates per postal code in Lake County Illinois. <a href="us_cancer_lake_county_illinois.html" target="_blank">map</a></p>
         </div>
       </div>
 
